--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,7 +11,7 @@ phases:
   pre_build:
     commands:
       - echo Entered the pre_build phase...
-      - npm i
+      - npm ci
     finally:
       - echo This always runs even if the login command fails 
   build:
@@ -31,5 +31,5 @@ phases:
 
 cache:
   paths:
-    - '/root/node_modules/**/*'
+    - './node_modules/**/*'
 
